k8s-demo/04-ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-ingress
spec:
  ingressClassName: traefik
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend-clusterip
            port:
              number: 5050
      - path: /swagger
        pathType: Prefix
        backend:
          service:
            name: backend-clusterip
            port:
              number: 5050
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-clusterip
            port:
              number: 80
